toggle button added

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                                List Rank
-                            </a>
+                            <button type="button" data-parent="#accordion" class="btn btn-default btn-xs" data-toggle="collapse" data-target="#collapseOne">
+                                <span class="glyphicon glyphicon-minus"></span>
+                            </button> List Rank
                         </h4>
                     </div>
                     <div id="collapseOne" class="panel-collapse collapse in">
@@ -41,9 +41,9 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                                Email Formatting
-                            </a>
+                            <button type="button" data-parent="#accordion" class="btn btn-default btn-xs" data-toggle="collapse" data-target="#collapseTwo">
+                                <span class="glyphicon glyphicon-plus"></span>
+                            </button> Email Formatting
                         </h4>
                     </div>
                     <div id="collapseTwo" class="panel-collapse collapse">
@@ -57,9 +57,9 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                                Weather App
-                            </a>
+                            <button type="button" data-parent="#accordion" class="btn btn-default btn-xs" data-toggle="collapse" data-target="#collapseThree">
+                                <span class="glyphicon glyphicon-plus"></span>
+                            </button> Weather App
                         </h4>
                     </div>
                     <div id="collapseThree" class="panel-collapse collapse">
@@ -72,9 +72,9 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
-                                YouTube Channel Pull
-                            </a>
+                            <button type="button" data-parent="#accordion" class="btn btn-default btn-xs" data-toggle="collapse" data-target="#collapseFour">
+                                <span class="glyphicon glyphicon-plus"></span>
+                            </button> YouTube Channel Pull
                         </h4>
                     </div>
                     <div id="collapseFour" class="panel-collapse collapse">
@@ -95,6 +95,7 @@
         </div>
     </div>
 </div>
+<script type="text/javascript" src="js/accordion.js"></script>
 <script type="text/javascript">
     $(function(){
         $('a').attr('target','blank');
