added Denver Sports Scene

--- a/index.html
+++ b/index.html
@@ -25,12 +25,27 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <button type="button" data-parent="#accordion" class="btn btn-default btn-xs" data-toggle="collapse" data-target="#collapseOne">
+                            <button type="button" data-parent="#accordion" class="btn btn-default btn-xs" data-toggle="collapse" data-target="#collapseDSS">
                                 <span class="glyphicon glyphicon-minus"></span>
+                            </button> Denver Sports Scene
+                        </h4>
+                    </div>
+                    <div id="collapseDSS" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            <p><a href="https://github.com/steveperrito/DenverSportsScene">GitHub</a> | <a href="http://steveperrito.github.io/DenverSportsScene/">Demo</a></p>
+                            <p>Denver Sports Scene is a single page app that asynchronously pulls in the schedule data of popular Denver Sports teams. The UI then allows one to quickly see today's home/away games as well as other games on just about any date.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <button type="button" data-parent="#accordion" class="btn btn-default btn-xs" data-toggle="collapse" data-target="#collapseOne">
+                                <span class="glyphicon glyphicon-plus"></span>
                             </button> List Rank
                         </h4>
                     </div>
-                    <div id="collapseOne" class="panel-collapse collapse in">
+                    <div id="collapseOne" class="panel-collapse collapse">
                         <div class="panel-body">
                             <p><a href="https://github.com/steveperrito/list_rank">GitHub</a> | <a href="http://steveperrito.github.io/list_rank/">Demo</a></p>
                             <p>A simple to-do/ranking app that both displays and stores data. Although extremely simple, the app shows a core understanding of <a href="http://en.wikipedia.org/wiki/Create,_read,_update_and_delete">C.R.U.D.</a></p>
