--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <button type="button" data-parent="#accordion" class="btn btn-default btn-xs" data-toggle="collapse" data-target="#collapseDSS">
-                                <span class="glyphicon glyphicon-minus"></span>
+                                <span class="glyphicon glyphicon-plus"></span>
                             </button> Denver Sports Scene
                         </h4>
                     </div>
-                    <div id="collapseDSS" class="panel-collapse collapse in">
+                    <div id="collapseDSS" class="panel-collapse collapse">
                         <div class="panel-body">
                             <p><a href="https://github.com/steveperrito/DenverSportsScene">GitHub</a> | <a href="http://steveperrito.github.io/DenverSportsScene/">Demo</a></p>
                             <p>Denver Sports Scene is a single page app that asynchronously pulls in the schedule data of popular Denver Sports teams. The UI then allows one to quickly see today's home/away games as well as other games on just about any date.</p>
@@ -97,6 +97,20 @@
                             <p><a href="https://github.com/steveperrito/YouTube_ChannelPull">GitHub</a> | <a href="http://steveperrito.github.io/YouTube_ChannelPull/">Demo</a></p>
                             <p>A very simple solution for one of my clients. He was sick of emedding his YouTube vidoes every time he made a new one.</p>
                             <p>This short bit of code dynamically embeds the latest video on his channel. All he has to do is upload content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <button type="button" data-parent="#accordion" class="btn btn-default btn-xs" data-toggle="collapse" data-target="#collapseFive">
+                                <span class="glyphicon glyphicon-plus"></span>
+                            </button> Contact Info
+                        </h4>
+                    </div>
+                    <div id="collapseFive" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <p><span class="glyphicon glyphicon-envelope"></span> <a href="mailto:steveperrito@gmail.com">steveperrito@gmail.com</a> | <span class="glyphicon glyphicon-earphone"></span> 720-988-6201</p>
                         </div>
                     </div>
                 </div>
