--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Resume | Steve Perry</title>
-  <!--<link rel="stylesheet" href="css/superhero.bulma.css">
-  <link rel="stylesheet" href="css/custom.css">-->
-  <style>
-    @media print {
-        body, html, #app {
-            height: 100%;
-        }
-    }
-  </style>
 </head>
-<body style="min-height: 22in">
+<body>
 
 <div id="app"></div>
 
